# MemFlow

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile.core  Dockerfile.executor  IMPLEMENTATION_STATUS.md  INTERNET_LEARNING_TASKS.md  README.md  check_output.txt  code_review_report.md  config.py  docker-compose.dev.yml  docker-compose.yml  install-termux.sh  install.ps1  install.sh  main.py  requirements.txt  start.ps1  start.sh
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json  memflow-next-steps.md  memflow-phase2-plan.md  memflow-upgrade-plan.md
.sisyphus/plans/: memflow-upgrade-roadmap.md
.zeabur-deploy/: agent.env  executor.env
.zeabur-deploy/agent/: Dockerfile
.zeabur-deploy/executor-clean/: Cargo.toml  Dockerfile
.zeabur-deploy/executor-clean/cli/: Cargo.toml
.zeabur-deploy/executor-clean/executor/: Cargo.toml
.zeabur-deploy/executor-clean/executor/src/: auth.rs  cluster.rs  code.rs  db.rs  dry_run.rs  dynamic_node.rs  environment.rs  error.rs  file.rs  google_sheets.rs  http.rs  http_server.rs  lane.rs  lib.rs  main.rs  metrics.rs  plugin_api.rs  shmem.rs  skill_registry.rs  slack.rs  validator.rs  workflow_registry.rs
.zeabur-deploy/executor-clean/learning-engine/: Cargo.toml
.zeabur-deploy/executor-clean/learning-engine/src/: feedback.rs  lib.rs  main.rs  memory_extractor.rs  n8n_validator.rs  offline_validator.rs  param_optimizer.rs  prompt_optimizer.rs
.zeabur-deploy/executor/cli/cli/: Cargo.toml
.zeabur-deploy/executor/cli/cli/src/: commands.rs  main.rs
.zeabur-deploy/web-ui/: Dockerfile
.zeabur-deploy/web-ui-clean/: Dockerfile
agent-core/: Cargo.toml
agent-core/src/: agent_loop.rs  event_queue.rs  grpc.rs  lib.rs  llm.rs  tool.rs  tracing.rs
agent-service/: package-lock.json  package.json  setup.ts  test-mcp-server.js  tsconfig.json  vitest.config.ts
agent-service/src/: agent-config.ts  agent-loop.ts  agent-tools.ts  alert_channels.ts  audit.ts  auth-middleware.ts  autonomy_supervisor.ts  backup.ts  business_metrics.ts  checkpoints.ts  coding_kernel.ts  computer_agent.ts  context-compressor.ts  curator.ts  example.test.ts  external-modules.d.ts  gateway-bridge.ts  goal-loop.ts  hermes_agent_loop.ts  index.test.ts  index.ts  llm_catalog.ts  llm_client.ts  llm_router.ts  llm_settings.ts  logger.ts  marketplace.ts  mcp-client.ts  metrics.ts  middleware-chain.ts  persistent-agent.ts  provider-config.ts  rate-limiter.ts  rate_limit.ts  security-scanner.ts  skill-loader.ts  (+9 more)
compiler/: Cargo.toml
core/: __init__.py  agent_loop.py  sandbox.py  task_planner.py  tool_manager.py
docs/: ERROR_CODES.md  OpenCode_MemFlow_部门代码任务表_2026-04-19.md  OpenCode_执行指令模板_可直接粘贴.md  PHILOSOPHY.md
executor/: Cargo.toml
executor/src/: a2a.rs  audit.rs  auth.rs  aws.rs  cache.rs  cluster.rs  code.rs  concurrency.rs  cron.rs  db.rs  db_node.rs  dry_run.rs  dynamic_node.rs  email.rs  environment.rs  error.rs  github.rs  global_registry.rs  http.rs  http_server.rs  lane.rs  lib.rs  logging.rs  memory_pool.rs  metrics.rs  migrations.rs  notion.rs  plugin.rs  plugin_api.rs  plugin_exec.rs  queue.rs  rating.rs  sandbox.rs  scheduler_rs.rs  secrets.rs  security.rs  skill_registry.rs  sub_agent.rs  telegram.rs  tracing.rs  (+6 more)
executor/src/scraper/: fusion.rs  knowledge.rs  mod.rs  security.rs  upgrade.rs
executor/src/test/: e2e.rs  mod.rs  runner.rs  test_runner.rs
executor/tests/: core_tests.rs  lib.rs
gateway/: Cargo.toml
knowledge-base/: patterns.json  rules.json  specs.json
logs/: llm-settings.json
mcp/: __init__.py  mcp_client.py
memflow-mcp-server/: README.md  package.json  pyproject.toml
memflow-mcp-server/src/: index.ts
memflow-mcp-server/src/memflow_mcp_server/: __init__.py  server.py
memory-hub/: Cargo.toml
memory-hub/src/: embedding.rs  embeddings.rs  graph_memory.rs  layered_memory.rs  lib.rs  main.rs  recall_enhancer.rs
migrations/: 001_init.sql  20250414_materialized_views.sql
prometheus/: alerts.yml
proto/: memflow.proto
scheduler/: __init__.py  manager.py  models.py  storage.py
scripts/: cron-runner.js  debug-executor-8092.ps1  dev-local.ps1  dev.sh  extract_docx_lines.ps1  finetune_lora.py  install-cli.sh  prepare_finetune_data.py  restart-live-agent.ps1  restart-live-executor.ps1  seed-cron-workflows.js  serve-web-ui.js  stop-local.ps1  update-golden.sh
skills/: ext_brainstorming.json  ext_systematic-debugging.json  ext_test-driven-development.json  ext_verification-before-completion.json  ext_writing-plans.json
tasks/: 001-ir.md  002-parser.md  003-executor-basic.md  004-http-node.md  005-agent-service.md  006-shared-memory.md  007-code-node.md  008-conditional-branch.md  009-for-loop.md  010-subworkflow-call.md  011-sqlite-persistence.md  012-dynamic-workflow-creation.md  A1-workflow-versioning.md  A5-execution-timeout.md  A6-concurrency-limit.md  CC1-memflow-cli.md  CC2-01-declarative-node.md  CC2-02-auto-memory.md  CC2-03-sub-agent.md  CC2-04-plan-mode.md  CC2-05-skill-library.md  CC2-lane-recovery.md  CC3-container-first.md  CC4-parity-testing.md  CC5-philosophy-doc.md  DOC-01-swagger-ui.md  DOC-02-video-tutorial.md  DOC-03-best-practices.md  DOC-04-troubleshooting.md  E1-federated-learning.md  E10-impact-analyzer.md  E2-global-registry.md  E3-rl-decision.md  E4-hyperopt-auto.md  E5-llm-router.md  E6-fine-tune-loop.md  E7-workflow-marketplace.md  E8-rating-comments.md  E9-evolution-timeline.md  ECO-01-editor-plugins.md  (+67 more)
test/: e2e.ps1
tests/: e2e_test.sh  parity_test.rs  test_python_core.py
ui/: __init__.py  app.py
user_modeling/: Cargo.toml
user_modeling/src/: lib.rs
utils/: __init__.py  context_manager.py
web-ui/: Dockerfile.frontend  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+179 files in other folders)
