[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
once_cell = "1.19"
async-trait = "0.1"
executor = { path = "../executor" }
compiler = { path = "../compiler" }
memory-hub = { path = "../memory-hub" }

[lib]
name = "agent_core"
path = "src/lib.rs"

