[package]
name = "executor"
version.workspace = true
edition.workspace = true

[dependencies]
compiler = { path = "../compiler" }
learning-engine = { path = "../learning-engine" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
shared_memory = "0.12"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.8"
tower-http = { version = "0.6", features = ["set-header"] }
url = "2"
select = "0.6"
regex = "1"
lettre = { version = "0.11", optional = true }
cron = "0.15"
redis = { version = "0.29", features = ["tokio-comp"], optional = true }
jsonpath-rust = "0.7"
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

[features]
default = []
full = ["lettre", "redis", "aws-sdk-s3", "aws-config"]
email = ["lettre"]
cache = ["redis"]
aws = ["aws-sdk-s3", "aws-config"]
