[project]
name = "memflow-mcp-server"
version = "0.1.0"
description = "MemFlow MCP Server - Expose MemFlow as MCP tool server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
memflow-mcp = "memflow_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"