[package]
name = "memory-hub"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
text-splitter = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"
axum = "0.7"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
bincode = "1.3"
tempfile = "3"

