[package]
name = "memflow-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustyline = "12"
thiserror = "1.0"
chrono = "0.4"
dirs = "5"