[package]
name = "executor"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
compiler = { path = "../compiler" }
learning-engine = { path = "../learning-engine" }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1.3"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
shared_memory = "0.12"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = "0.4"
rand = "0.8"
tower-http = "0.6"