[package]
name = "learning-engine"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }
axum = "0.7"
rand = "0.8"

[dev-dependencies]
tempfile = "3"