[package]
name = "memflow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rustyline = "12"
thiserror = "1.0"
chrono = "0.4"
dirs = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1